@@ -1,3 +1,9 @@
+2002-03-28  Fumitoshi UKAI  <ukai@debian.or.jp>
+
+	* terms.c (set_tty): s/term_info/w3m_term_info/g;
+		struct term_info is defined in FreeBSD's sys/consio.h
+		reported by KOIE Hidetaka <hide@koie.org>
+
 2002-03-28  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
 
 	* [w3m-dev 03146] Re: header option
@@ -3297,4 +3303,4 @@
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.362 2002/03/27 15:35:06 ukai Exp $
+$Id: ChangeLog,v 1.363 2002/03/27 15:41:37 ukai Exp $
